FEAT ora l'active chat cambia anche l'avatar

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <div class="row"  >
                                     
 
-                                    <img class="preview__pic col-auto " src="./img/avatar_1.png" alt="profilo">
+                                    <img class="preview__pic col-auto" :src="activeAvatar" alt="profilo">
                                     <div class="col-auto my-auto">
                                         <h3 >{{activeName}}</h3>
                                         <h5>Ultimo accesso</h5></div>
