--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div  
                         class="chatting__content col-auto flex-grow-1 m-0 ">
                             <ul v-for="(elemento, i) in contacts[activeChat].messages" 
-                            class="col-12 row flex-column m-2">
+                            class="col-12 row flex-column m-0">
                                 <li class="message"
                                 :class=" elemento.status === 'sent' ? 'sent' : 'received'">
                                     <h4 >
@@ -126,11 +126,11 @@
                         <div class="chatting__input col-auto align-middle  row p-2 m-0">
                             <div class="col-1 m-auto row "><i class="fa-regular fa-face-smile text-center"></i></div>
 
-                            <div class="col-auto flex-grow-1 ">
-                                <input type="text" class="form-control p-3" placeholder="Scrivi un messaggio">
+                            <div class="col-auto  flex-grow-1 ">
+                                <input @keyup.enter="sendMessage(newMessage)" type="text"  class="form-control p-3" v-model="newMessage" :placeholder="placeholderMessage">
                             </div>
 
-                            <div class="col-1 m-auto row "><i class="fa-solid fa-microphone text-center "></i></div>
+                            <div class="col-1 m-auto row "><i class="fa-solid fa-microphone text-center cover"></i><i class="hide fa-solid fa-paper-plane"></i></div>
                         </div>
                         
                    
