--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <div class="col-1 m-auto row "><i class="fa-regular fa-face-smile text-center"></i></div>
 
                             <div class="col-auto  flex-grow-1 ">
-                                <input @keyup.enter="sendMessage(newMessage)" type="text"  class="form-control p-3" v-model="newMessage" :placeholder="placeholderMessage">
+                                <input  @keyup.enter="addMessage()" type="text"  class="form-control p-3" v-model="inputMessage" :placeholder="placeholderMessage">
                             </div>
 
                             <div class="col-1 m-auto row "><i class="fa-solid fa-microphone text-center cover"></i><i class="hide fa-solid fa-paper-plane"></i></div>
